[package]
name = "msg-dmap"
version = "0.1.0"
edition = "2021"
authors = ["calmhlynn <barca105@naver.com>"]
license = "MIT"
repository = "https://github.com/calmhlynn/msg-dmap"

[dependencies]
chrono = "0.4.39"
dashmap = "6.1.0"
dotenvy = "0.15.7"
log = "0.4.25"
once_cell = "1.20.2"
rdkafka = { version = "0.37.0", features = ["cmake-build", "gssapi"] }
tokio = { version = "1.43.0", features = ["full"] }
