[package]
name = "msg-dmap"
version = "0.1.0"
edition = "2021"
authors = ["calmhlynn <barca105@naver.com>"]
license = "MIT"
repository = "https://github.com/calmhlynn/msg-dmap"

[dependencies]
chrono = "0.4.39"
dashmap = "6.1.0"
dotenvy = "0.15.7"
log = "0.4.25"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
thiserror = "2.0.11"

[dev-dependencies]
