[package]
name = "msg-dmap"
version = "0.1.0"
edition = "2021"
authors = ["calmhlynn <barca105@naver.com>"]
license = "MIT"
repository = "https://github.com/calmhlynn/msg-dmap"

[dependencies]
chrono = "0.4.40"
dashmap = "6.1.0"
dotenvy = "0.15.7"
log = "0.4.26"
once_cell = "1.21.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.45", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3.31"
